// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkAnimateHeight should render correctly collapsed 1`] = `null`;

exports[`iOS BpkAnimateHeight should render correctly expanded 1`] = `
<View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 0.01,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`iOS BpkAnimateHeight should render correctly with n children 1`] = `
<View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 0.01,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`iOS BpkAnimateHeight should render correctly with user styling padding 1`] = `
<View
  style={
    Object {
      "marginBottom": 12,
    }
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 0.01,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;
